--- a/downloads.html
+++ b/downloads.html
@@ -48,5 +48,22 @@
                 <a href="downloads/roblox.zip">Download</a>
             </div>
         </section>
+        <center>
+        <h1 style="translate:0px 100px; color:white;">Gameboy pokemon games</h1>
+        </center>
+        <section class="container">
+            <div class="card">
+                <div class="card-image btn-9"></div>
+                <h2>Pokemon Fire Red</h2>
+                <p>Gotta Catch'em all 1</p>
+                <a href="downloads/poke_red.zip">Download</a>
+            </div>
+            <div class="card">
+                <div class="card-image btn-8"></div>
+                <h2>Pokemon Emerald</h2>
+                <p>Gotta Catch'em all 2</p>
+                <a href="downloads/poke_em.zip">Download</a>
+            </div>
+        </section>
     </body>
 </html>
