--- a/other.html
+++ b/other.html
@@ -31,11 +31,11 @@
                 <p>Windows on a Mac</p>
                 <a href="downloads/vm.zip">Download</a>
             </div>
-            <div class="card">
+            <div class="buy">
                 <div class="card-image btn-6"></div>
                 <h2>VPN</h2>
                 <p>The school no longer controls us</p>
-                <a href="downloads/vpn.zip">Download</a>
+            <!--    <a href="VPN PLACE HOLDER">Buy</a>   -->
             </div>
         </section>
 
