--- a/other.html
+++ b/other.html
@@ -35,7 +35,7 @@
                 <div class="card-image btn-6"></div>
                 <h2>VPN</h2>
                 <p>The school no longer controls us</p>
-            <!--    <a href="VPN PLACE HOLDER">Buy</a>   -->
+                <a href="">Will be available soon!</a>
             </div>
         </section>
 
